--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,3 +3,7 @@ body{
     font-family: "arial";
     color: deeppink;
 }
+h1{
+    background-color: aqua;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
