--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,6 +4,6 @@ body{
     color: deeppink;
 }
 h1{
-    background-color: aqua;
+    background-color: rgba(0, 255, 255, 0.411);
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
